Added passwords forgot and change feature

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,16 +1,72 @@
 es:
+  change_password:
+    change_password: "Cambiar contraseña"
+    label_new_password: "Nueva contraseña"
+    label_confirm_new_password: "Confirma tu nueva contraseña"
+    label_button: "Cambiar contraseña"
+    new_password_notice: "En espacio te indicaremos la seguridad de la contraseña que escribas. Por razones de seguridad, no te dejaremos utilizar una contraseña que sea mala o peor."
+    notice: ""
+    password_changed: Tu contraseña ha sido cambiada.
+    invalid_password: La contraseña que has escrito no cumple los requisitos mínimos de seguridad.
+    password_not_changed: "Ha ocurrido un error al intentar cambiar tu contraseña. Por favor, inténtalo nuevamente o contacta con soporte informático."
+    password_strength_level: "Seguridad de la contraseña:"
+    password_strength_levels:
+      worst: "Horrible"
+      bad: "Mala"
+      weak: "Débil"
+      good: "Buena"
+      strong: "Óptima"
+    suggestions:
+      add_words: "Añade una o dos más palabras. Es preferible que sean poco comunes."
+      few_words: "Utiliza algunas palabras, evita frases comunes."
+      no_need: "No hace falta usar símbolos, números o mayúsculas."
+      longer_keyboard_pattern: "Utiliza un patrón de teclado más complicado."
+      avoid_repeated_words: "Evita repetir letras o palabras."
+      avoid_sequences: "Evita las secuencias."
+      avoid_recent_years: "Evita años recientes."
+      avoid_related_years: "Evita años que puedan estar relacionados contigo."
+      avoid_related_dates: "Evita años y fechas que puedan estar relacionados contigo."
+    warnings:
+      common_password: "Esta es una contraseña muy habitual."
+      repeats_aaa: "Repeticiones como 'aaa' son fáciles de adivinar."
+      repeats_abc: "Repeticiones como 'abcabcabc' son apenas más difíciles de adivinar que 'abc'."
+      short_keyboard: "Los patrones del teclado cortos son fáciles de adivinar."
+      straight_rows: "Las filas de letras del teclado son fáciles de adivinar."
+      recent_years: "Los años recientes son fáciles de adivinar."
+      common_sequences: "Secuencias como 'abc' o '6543' son fáciles de adivinar."
+      dates: "En general, las fechas son fáciles de adivinar."
+      top_10_common_password: "Esta contraseña está entre las 10 más habituales."
+      top_100_common_password: "Esta contraseña está entre las 100 más habituales."
+      word_itself: "Una palabra sola es fácil de adivinar."
+      names_themselves: "Los nombres o apellidos solos son fáciles de adivinar."
+      common_names: "Los nombres y apellidos comunes son fáciles de adivinar."
+      capitalization: "Las mayúsculas no ayudan demasiado."
+      uppercase: "Poner todo en mayúsculas es casi tan facil de adivinar como si lo pones en minúsculas."
+      reversed_words: "Poner una palabra al revés no hace mucho más difícil de adivinar."
+      predictable_substitutions: "Sustituciones predecibles como poner '@' en vez de 'a' no ayudan demasiado."
+      similar_common_password: "Esta contraseña es muy parecida a una muy habitual."
+    title: "Cambio de contraseña"
   login_credential_acceptor:
     invalid_login_ticket: "Tu sesión ha caducado. Intenta acceder nuevamente."
-    invalid_login_credentials: "Email o contraseña incorrecto."
+    invalid_login_credentials: "Correo electrónico o contraseña incorrecto."
   login:
-    label_username: "Email"
+    forgot_password: He olvidado mi contraseña
+    label_username: "Usuario"
     label_password: "Contraseña"
     label_button: "Entrar"
     label_remember_me: "Recuérdame"
+    missing_user: "Debes introducir un nombre de usuario."
     notice: ""
+  forgot_password:
+    email_sent: "Hemos enviado a tu correo electrónico las instrucciones para restablecer tu contraseña."
+    email_subject: "Recuperar tu contraseña"
+    label_username: "Usuario"
+    label_button: "Enviar instrucciones"
+    notice: "Enviaremos a tu correo electrónico las instrucciones para restablecer tu contraseña."
+    title: "Recuperar contraseña"
   service_not_allowed:
     title: "Servicio no permitido"
-    message: "Este servicio no está configurado para acceder con \"%{service}\". Si crees que esto es un error, contacta con el equipo de soporte informático."
+    message: "Este servicio no está configurado para acceder con \"%{service}\". Si crees que esto es un error, contacta con soporte informático."
   validate_otp:
     title: "Autenticación de doble factor"
     description: "Por favor, introduce una contraseña de un solo uso válida."
